--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <title>CSS Exercice complet</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" media="screen" href="???">
+        <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     </head>
     <body>
         <div class="page">
             <div class="entete">
-                <div>Titre du site</div>
-                <div>Notre slogan</div>
+                <div class="titresite">Code Lovers</div>
+                <div class="slogan">Apprenez les langages HTML & CSS</div>
             </div>
             <div class="colonnes">
                 <div class="colonne_menu">
