Réalisation de l'étape 5
Ajout de parametre pour les titres, ancres, strong,
ajout de la classe introduction et de parametre css pour celle-ci.
ajout de balise <em>.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </div>
                 <div class="colonne_contenu">
                     <h1>Titre de niveau 1</h1>
-                    <p>
-                       Accedebant enim eius asperitati, ubi inminuta vel laesa 
-                       amplitudo imperii dicebatur, et iracundae suspicionum 
+                    <p class="introduction">
+                       <em> enim eius asperitati, ubi inminuta vel laesa 
+                       amplitudo imperii dicebatur</em>, et iracundae suspicionum 
                        quantitati <strong>proximorum</strong> cruentae blanditiae 
                        exaggerantium incidentia et dolere inpendio simulantium, si  
                        periclitetur vita, a cuius salute velut filo pendere statum 
@@ -40,7 +40,7 @@
                         cataractas porrigitur et confinia Blemmyarum, omnes pari 
                         sorte sunt bellatores <strong>seminudi coloratis</strong>  
                         amicti, equorum adiumento pernicium graciliumque camelorum 
-                        per diversa se raptantes, in tranquillis vel turbidis rebus: 
+                        per diversa se raptantes, <em>in tranquillis vel turbidis rebus</em>: 
                         <a href="#">eorum quisquam aliquando</a>
                         stivam adprehendit vel arborem colit aut arva subigendo 
                         quaeritat victum, sed errant semper per spatia longe lateque 
@@ -59,8 +59,8 @@
                     <p>
                        Eodem tempore <strong>Serenianus ex duce</strong>, cuius 
                        Phoenice Celsen ante rettulimus, pulsatae maiestatis imperii 
-                       reus iure postulatus ac lege, incertum qua potuit suffragatione 
-                       absolvi, aperte convictus familiarem suum cum pileo, quo caput 
+                       reus iure postulatus ac lege, <em>incertum qua potuit suffragatione 
+                       absolvi</em>, aperte convictus familiarem suum cum pileo, quo caput 
                        operiebat, incantato vetitis artibus ad templum misisse 
                        fatidicum, quaeritatum expresse an ei firmum portenderetur 
                        imperium, ut cupiebat, et cunctum.
